--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,2 @@
 tasks:
-  - init: echo "Replace me with a build script for the project."
-    command: echo "Replace me with something that should run on every start, or just
-      remove me entirely."
+  - init: yarn install
