--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Raman <raman.jay14@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "commander": "^5.1.0",
     "moment": "^2.26.0",
     "node-rdkafka": "^2.8.1",
