--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -36,7 +36,8 @@
                 "--kafka-consumer-group=${CONSUMER_GROUP_SESSION}",
                 "--kafka-user-connected-topic=${TOPIC_USER_CONNECTED}",
                 "--kafka-user-disconnected-topic=${TOPIC_USER_DISCONNECTED}",
-                "--kafka-broker-list=${BROKER_LIST}"
+                "--kafka-broker-list=${BROKER_LIST}",
+                "--json-server-port=${SESSION_MS_PORT}"
             ],
             "envFile": "${workspaceFolder}/.env"
         }, {
@@ -54,7 +55,7 @@
                 "--kafka-new-message-topic=${TOPIC_NEW_MESSAGE}",
                 "--kafka-persistence-message-topic=${TOPIC_DB_MESSAGE}",
                 "--kafka-broker-list=${BROKER_LIST}",
-                "--session-service-url=localhost:8001"
+                "--session-service-url='${SESSION_MS_HOST}:${SESSION_MS_PORT}'"
             ],
             "envFile": "${workspaceFolder}/.env"
         }, {
