--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,11 @@
 image:
   file: .gitpod.Dockerfile
   context: deployment/dev
+
+ports:
+  - port: 8080
+    onOpen: open-browser
+
 tasks:
   - init: yarn install
   - name: Kafka 
