--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "author": "Raman <raman.jay14@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@hapi/hapi": "^19.1.1",
     "bluebird": "^3.7.2",
     "commander": "^5.1.0",
     "moment": "^2.26.0",
+    "mongodb": "^3.5.8",
     "node-rdkafka": "^2.8.1",
     "winston": "^3.2.1",
     "ws": "^7.3.0"
