--- a/deployment/dev/config/nginx.conf
+++ b/deployment/dev/config/nginx.conf
@@ -27,6 +27,14 @@ http {
         server 127.0.0.1:8000;
     }
 
+    upstream profile_ms {
+
+    }
+
+    upstream auth_ms {
+
+    }
+
     server {
         set_by_lua $nginx_docroot_in_repo   'return os.getenv("NGINX_DOCROOT_IN_REPO")';
         set_by_lua $gitpod_repo_root        'return os.getenv("GITPOD_REPO_ROOT")';
@@ -39,12 +47,29 @@ http {
         }
 
         location /wss/ {
+            auth_request /auth;
+            auth_request_set $auth_status $upstream_status;
+
             rewrite /wss/(.*) /$1 break;
             proxy_pass http://connection_gateway;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
+        }
+
+        location /auth {
+            internal;
+
+            proxy_pass http://auth-server;
+            proxy_pass_request_body off;
+            proxy_set_header Content-Length "";
+            proxy_set_header X-Original-URI $request_uri;
+        }
+
+        location /profile/ {
+            rewrite /profile/(.*) /$1 break;
+            proxy_pass http://profile_ms;
         }
     }
 }
