--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,3 +16,5 @@ tasks:
       ./deployment/dev/scripts/init-kafka.bash $KAFKA_HOME .env
   - name: Nginx
     command: nginx
+  - name: mongodb
+    command: mkdir -p /workspace/data && mongod --dbpath /workspace/data
