--- a/deployment/dev/config/nginx.conf
+++ b/deployment/dev/config/nginx.conf
@@ -22,17 +22,13 @@ http {
         default upgrade;
         '' close;
     }
-    
+  
     upstream connection_gateway {
         server 127.0.0.1:8000;
     }
 
     upstream profile_ms {
-
-    }
-
-    upstream auth_ms {
-
+        server 127.0.0.1:4000
     }
 
     server {
@@ -46,6 +42,14 @@ http {
             index index.html;
         }
 
+        location /auth {
+            internal;
+
+            proxy_pass http://profile_ms;
+            proxy_pass_request_body off;
+            proxy_set_header Content-Length "";
+            proxy_set_header X-Original-URI $request_uri;
+        }
         location /wss/ {
             auth_request /auth;
             auth_request_set $auth_status $upstream_status;
@@ -58,17 +62,15 @@ http {
             proxy_set_header Host $host;
         }
 
-        location /auth {
-            internal;
-
-            proxy_pass http://auth-server;
-            proxy_pass_request_body off;
-            proxy_set_header Content-Length "";
-            proxy_set_header X-Original-URI $request_uri;
+        location /register {
+            proxy_pass http://profile_ms;
         }
 
-        location /profile/ {
-            rewrite /profile/(.*) /$1 break;
+        location /login {
+            proxy_pass http://profile_ms;
+        }
+
+        location /exist {
             proxy_pass http://profile_ms;
         }
     }
