--- a/deployment/dev/config/nginx.conf
+++ b/deployment/dev/config/nginx.conf
@@ -22,9 +22,13 @@ http {
         default upgrade;
         '' close;
     }
-    
+  
     upstream connection_gateway {
         server 127.0.0.1:8000;
+    }
+
+    upstream profile_ms {
+        server 127.0.0.1:4000;
     }
 
     server {
@@ -38,13 +42,36 @@ http {
             index index.html;
         }
 
+        location /auth {
+            internal;
+
+            proxy_pass http://profile_ms;
+            proxy_pass_request_body off;
+            proxy_set_header Content-Length "";
+            proxy_set_header X-Original-URI $request_uri;
+        }
         location /wss/ {
+            auth_request /auth;
+            auth_request_set $auth_status $upstream_status;
+
             rewrite /wss/(.*) /$1 break;
             proxy_pass http://connection_gateway;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
+        }
+
+        location /register {
+            proxy_pass http://profile_ms;
+        }
+
+        location /login {
+            proxy_pass http://profile_ms;
+        }
+
+        location /exist {
+            proxy_pass http://profile_ms;
         }
     }
 }
