--- a/deployment/dev/config/nginx.conf
+++ b/deployment/dev/config/nginx.conf
@@ -31,16 +31,15 @@ http {
         server 127.0.0.1:4000;
     }
 
+    upstream file_ms {
+        server 127.0.0.1:4001;
+    }
+
     server {
         set_by_lua $nginx_docroot_in_repo   'return os.getenv("NGINX_DOCROOT_IN_REPO")';
         set_by_lua $gitpod_repo_root        'return os.getenv("GITPOD_REPO_ROOT")';
 
         listen         0.0.0.0:8080;
-
-        location / {
-            root $gitpod_repo_root/$nginx_docroot_in_repo;
-            index index.html;
-        }
 
         location /auth {
             internal;
@@ -72,6 +71,21 @@ http {
 
         location /exist {
             proxy_pass http://profile_ms;
+        }
+
+        location ~ ^/file/(.*) {
+            auth_request /auth;
+            auth_request_set $auth_status $upstream_status;
+            
+            add_header X-match-uri "/file";
+            add_header X-uri $1;
+            rewrite ^/file/(.*) /$1 break;
+            proxy_pass http://file_ms;
+        }
+
+        location / {
+            root $gitpod_repo_root/$nginx_docroot_in_repo;
+            index index.html;
         }
     }
 }
