--- a/deployment/dev/config/nginx.conf
+++ b/deployment/dev/config/nginx.conf
@@ -73,6 +73,15 @@ http {
             proxy_pass http://profile_ms;
         }
 
+        location ~ /profile/(.*) {
+            auth_request /auth;
+            auth_request_set $auth_status $upstream_status;
+
+            rewrite ^/profile/(.*) /$1 break;
+            proxy_pass http://profile_ms;
+        }
+
+
         location ~ ^/file/(.*) {
             auth_request /auth;
             auth_request_set $auth_status $upstream_status;
