--- a/deployment/dev/config/nginx.conf
+++ b/deployment/dev/config/nginx.conf
@@ -35,6 +35,10 @@ http {
         server 127.0.0.1:4001;
     }
 
+    upstream group_ms {
+        server 127.0.0.1:4002;
+    }
+
     server {
         set_by_lua $nginx_docroot_in_repo   'return os.getenv("NGINX_DOCROOT_IN_REPO")';
         set_by_lua $gitpod_repo_root        'return os.getenv("GITPOD_REPO_ROOT")';
@@ -90,6 +94,17 @@ http {
             add_header X-uri $1;
             rewrite ^/file/(.*) /$1 break;
             proxy_pass http://file_ms;
+        }
+
+        location ~ ^/group/(.*) {
+            auth_request /auth;
+            auth_request_set $auth_status $upstream_status;
+
+            add_header X-match-uri "/group";
+            add_header X-uri $1;
+
+            rewrite ^/group/(.*) /$1 break;
+            proxy_pass http://group_ms;
         }
 
         location / {
