--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hapi/hapi": "^19.1.1",
     "bluebird": "^3.7.2",
     "commander": "^5.1.0",
+    "firebase-admin": "^9.1.1",
     "moment": "^2.26.0",
     "mongodb": "^3.5.8",
     "node-rdkafka": "^2.8.1",
