--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "bluebird": "^3.7.2",
     "commander": "^5.1.0",
     "firebase-admin": "^9.1.1",
+    "kafkajs": "^1.14.0",
     "moment": "^2.26.0",
     "mongodb": "^3.5.8",
-    "node-rdkafka": "^2.8.1",
     "winston": "^3.2.1",
     "ws": "^7.3.0"
   }
