--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-server",
-  "version": "0.0.1-a",
+  "version": "1.0.0",
   "description": "A chat server based on the microservice architecture to ensure high availability, high throughput, horizontal scalability using Kafka",
   "main": "",
   "repository": "https://github.com/ramank775/chat-server.git",
