--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "kafkajs": "^1.14.0",
     "moment": "^2.26.0",
     "mongodb": "^3.5.8",
+    "node-fetch": "^2.6.1",
     "winston": "^3.2.1",
     "ws": "^7.3.0"
   }
