fix: single chat request flow

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,11 +13,8 @@
                 "--debug",
                 "--gateway-name=gateway-1",
                 "--kafka-client-id=gateway-1",
-                "--kafka-consumer-group=${CONSUMER_GROUP_GATEWAY}",
                 "--kafka-user-connected-topic=${TOPIC_USER_CONNECTED}",
                 "--kafka-user-disconnected-topic=${TOPIC_USER_DISCONNECTED}",
-                "--kafka-message-sent-topic=${TOPIC_MESSAGE_SENT}",
-                "--kafka-error-message-send-topic=${TOPIC_MESSAGE_SENT_ERROR}",
                 "--kafka-new-message-topic=${TOPIC_NEW_MESSAGE}",
                 "--kafka-broker-list=${BROKER_LIST}",
                 "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
@@ -38,8 +35,11 @@
                 "--kafka-consumer-group=${CONSUMER_GROUP_SESSION}",
                 "--kafka-user-connected-topic=${TOPIC_USER_CONNECTED}",
                 "--kafka-user-disconnected-topic=${TOPIC_USER_DISCONNECTED}",
+                "--kafka-user-disconnected-topic=${TOPIC_USER_DISCONNECTED}",
+                "--kafka-send-message-topic=${TOPIC_SEND_MESSAGE}",
+                "--kafka-persistence-message-topic=${TOPIC_DB_MESSAGE}",
+                "--service-discovery-path=${SERVICE_DISCOVERY_PATH}",
                 "--kafka-broker-list=${BROKER_LIST}",
-                "--json-server-port=${SESSION_MS_PORT}",
                 "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
                 "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
                 "--kafka-sasl-password=${KAFKA_SASL_PASSWORD}"
@@ -56,12 +56,9 @@
                 "--debug",
                 "--kafka-client-id=message-router-1",
                 "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_ROUTER}",
-                "--kafka-message-sent-failed-topic=${TOPIC_MESSAGE_SENT_FAILED}",
-                "--kafka-error-message-send-topic=${TOPIC_MESSAGE_SENT_ERROR}",
+                "--kafka-send-message-topic=${TOPIC_SEND_MESSAGE}",
                 "--kafka-new-message-topic=${TOPIC_NEW_MESSAGE}",
-                "--kafka-persistence-message-topic=${TOPIC_DB_MESSAGE}",
                 "--kafka-broker-list=${BROKER_LIST}",
-                "--session-service-url=${SESSION_MS_HOST}:${SESSION_MS_PORT}",
                 "--kafka-group-message-topic=${TOPIC_NEW_GROUP_MS}",
                 "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
                 "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
