Added new message payload and refactor service

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,12 +9,11 @@
             "name": "Launch Gateway MS",
             "program": "${workspaceFolder}/services/connection-gateway/gateway.js",
             "args": [
-                "--app-name=${TOPIC_GATEWAY_MS_1}",
+                "--app-name=ws-gateway-1",
                 "--debug",
                 "--gateway-name=gateway-1",
                 "--kafka-client-id=gateway-1",
-                "--kafka-user-connected-topic=${TOPIC_USER_CONNECTED}",
-                "--kafka-user-disconnected-topic=${TOPIC_USER_DISCONNECTED}",
+                "--kafka-user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
                 "--kafka-new-message-topic=${TOPIC_NEW_MESSAGE}",
                 "--kafka-broker-list=${BROKER_LIST}",
                 "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
@@ -33,9 +32,7 @@
                 "--debug",
                 "--kafka-client-id=session-1",
                 "--kafka-consumer-group=${CONSUMER_GROUP_SESSION}",
-                "--kafka-user-connected-topic=${TOPIC_USER_CONNECTED}",
-                "--kafka-user-disconnected-topic=${TOPIC_USER_DISCONNECTED}",
-                "--kafka-user-disconnected-topic=${TOPIC_USER_DISCONNECTED}",
+                "--kafka-user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
                 "--kafka-send-message-topic=${TOPIC_SEND_MESSAGE}",
                 "--kafka-persistence-message-topic=${TOPIC_DB_MESSAGE}",
                 "--service-discovery-path=${SERVICE_DISCOVERY_PATH}",
