--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
                 "--kafka-consumer-group=${CONSUMER_GROUP_SESSION}",
                 "--kafka-user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
                 "--kafka-send-message-topic=${TOPIC_SEND_MESSAGE}",
-                "--kafka-persistence-message-topic=${TOPIC_DB_MESSAGE}",
+                "--kafka-persistence-message-topic=${TOPIC_OFFLINE_MESSAGE}",
                 "--service-discovery-path=${SERVICE_DISCOVERY_PATH}",
                 "--kafka-broker-list=${BROKER_LIST}",
                 "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
@@ -69,14 +69,14 @@
             "name": "Launch persistence message MS",
             "program": "${workspaceFolder}/services/persistence-message-ms/persistence-message-ms.js",
             "args": [
-                "--app-name=${TOPIC_PERSISTENCE_MESSAGE_MS_1}",
+                "--app-name=persistence-message-1",
                 "--debug",
                 "--kafka-client-id=persistence-message-1",
                 "--kafka-consumer-group=${CONSUMER_GROUP_PERSISTENCE_MESSAGE}",
-                "--kafka-user-connected-topic=${TOPIC_USER_CONNECTED}",
+                "--kafka-user-connected-topic=${TOPIC_USER_CONNECTION_STATE}",
                 "--kafka-new-message-topic=${TOPIC_NEW_MESSAGE}",
                 "--kafka-broker-list=${BROKER_LIST}",
-                "--kafka-persistence-message-topic=${TOPIC_DB_MESSAGE}",
+                "--kafka-persistence-message-topic=${TOPIC_OFFLINE_MESSAGE}",
                 "--mongo-url=${MONGO_URL}",
                 "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
                 "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
