implement arch v2.1 changes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,16 +25,18 @@
         }, {
             "type": "node",
             "request": "launch",
-            "name": "Launch Session MS",
-            "program": "${workspaceFolder}/services/session-ms/session-ms.js",
+            "name": "Launch Message Delivery MS",
+            "program": "${workspaceFolder}/services/message-delivery/message-delivery-ms.js",
             "args": [
-                "--app-name=session-1",
+                "--app-name=message-delivery",
                 "--debug",
-                "--kafka-client-id=session-1",
-                "--kafka-consumer-group=${CONSUMER_GROUP_SESSION}",
+                "--mongo-url=${MONGO_URL}",
+                "--kafka-client-id=message-delivery-1",
+                "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_DELIVERY}",
                 "--kafka-user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
                 "--kafka-send-message-topic=${TOPIC_SEND_MESSAGE}",
-                "--kafka-persistence-message-topic=${TOPIC_OFFLINE_MESSAGE}",
+                "--kafka-ack-topic=${TOPIC_ACK_MESSAGE}",
+                "--kafka-offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
                 "--service-discovery-path=${SERVICE_DISCOVERY_PATH}",
                 "--kafka-broker-list=${BROKER_LIST}",
                 "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
@@ -55,29 +57,9 @@
                 "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_ROUTER}",
                 "--kafka-send-message-topic=${TOPIC_SEND_MESSAGE}",
                 "--kafka-new-message-topic=${TOPIC_NEW_MESSAGE}",
+                "--kafka-ack-topic=${TOPIC_ACK_MESSAGE}",
                 "--kafka-broker-list=${BROKER_LIST}",
                 "--kafka-group-message-topic=${TOPIC_NEW_GROUP_MS}",
-                "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
-                "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
-                "--kafka-sasl-password=${KAFKA_SASL_PASSWORD}"
-            ],
-            "envFile": "${workspaceFolder}/.env",
-            "autoAttachChildProcesses": true
-        }, {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch persistence message MS",
-            "program": "${workspaceFolder}/services/persistence-message-ms/persistence-message-ms.js",
-            "args": [
-                "--app-name=persistence-message-1",
-                "--debug",
-                "--kafka-client-id=persistence-message-1",
-                "--kafka-consumer-group=${CONSUMER_GROUP_PERSISTENCE_MESSAGE}",
-                "--kafka-user-connected-topic=${TOPIC_USER_CONNECTION_STATE}",
-                "--kafka-send-message-topic=${TOPIC_SEND_MESSAGE}",
-                "--kafka-broker-list=${BROKER_LIST}",
-                "--kafka-persistence-message-topic=${TOPIC_OFFLINE_MESSAGE}",
-                "--mongo-url=${MONGO_URL}",
                 "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
                 "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
                 "--kafka-sasl-password=${KAFKA_SASL_PASSWORD}"
