--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "https://github.com/ramank775/chat-server.git",
   "author": "Raman <raman.jay14@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "lint": "eslint --fix ."
+  },
   "dependencies": {
     "@hapi/hapi": "^20.0.3",
     "@pm2/io": "^5.0.0",
@@ -19,5 +22,11 @@
     "node-fetch": "^2.6.1",
     "winston": "^3.2.1",
     "ws": "^7.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "2.3.2"
   }
 }
