--- a/deployment/dev/config/nginx.conf
+++ b/deployment/dev/config/nginx.conf
@@ -64,6 +64,13 @@ http {
             proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
         }
+        
+        location /messages {
+          auth_request /auth;
+          auth_request_set $auth_status $upstream_status;
+
+          proxy_pass http://connection_gateway;
+        }
 
         location /login {
             proxy_pass http://profile_ms;
