--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   "author": "Raman <raman.jay14@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint --fix ."
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "prepare": "husky install"
+  },
+  "engines": {
+    "node": ">12.0.0"
   },
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
@@ -25,9 +30,19 @@
     "ws": "^8.4.0"
   },
   "devDependencies": {
-    "eslint": "^8.6.0",
+    "eslint": "^8.8.0",
+    "@babel/core": "^7.17.0",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "7.16.11",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "2.5.1"
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "2.5.1",
+    "husky": "^7.0.4"
   }
 }
