--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # Initializes the CodeQL tools for scanning.
+      - name: Install Dependencies
+        run: yarn install --immutable
+
       - name: Run liniting
         run: npm run lint
