--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
         "--app-name=ws-gateway-1",
         "--debug",
         "--gateway-name=gateway-1",
+        "--event-store=kafka",
         "--kafka-client-id=gateway-1",
         "--user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
         "--new-message-topic=${TOPIC_NEW_MESSAGE}",
@@ -32,6 +33,7 @@
         "--app-name=message-delivery",
         "--debug",
         "--mongo-url=${MONGO_URL}",
+        "--event-store=kafka",
         "--kafka-client-id=message-delivery-1",
         "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_DELIVERY}",
         "--user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
@@ -57,6 +59,7 @@
       "args": [
         "--app-name=message-router-1",
         "--debug",
+        "--event-store=kafka",
         "--kafka-client-id=message-router-1",
         "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_ROUTER}",
         "--send-message-topic=${TOPIC_SEND_MESSAGE}",
@@ -82,6 +85,7 @@
         "--port=4000",
         "--mongo-url=${MONGO_URL}",
         "--firebase-project-id=${FIREBASE_PROJECT_ID}",
+        "--event-store=kafka",
         "--kafka-broker-list=${BROKER_LIST}",
         "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
         "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
@@ -119,7 +123,7 @@
         "--debug",
         "--port=4002",
         "--mongo-url=mongodb://localhost:27017/chat",
-        "--json-server-port=${GROUP_MS_JSON_PORT}",
+        "--event-store=kafka",
         "--kafka-client-id=group-1",
         "--kafka-broker-list=${BROKER_LIST}",
         "--new-group-message-topic=${TOPIC_NEW_GROUP_MS}"
@@ -135,6 +139,7 @@
       "args": [
         "--app-name=group-message-router-1",
         "--debug",
+        "--event-store=kafka",
         "--kafka-client-id=group-message-router-1",
         "--send-message-topic=${TOPIC_SEND_MESSAGE}",
         "--kafka-consumer-group=${CONSUMER_GROUP_GROUP_MESSAGE_ROUTER}",
@@ -157,6 +162,7 @@
         "--debug",
         "--mongo-url=${MONGO_URL}",
         "--firebase-admin-credential-json-path=${FIREBASE_ADMIN_CRED_JSON_PATH}",
+        "--event-store=kafka",
         "--kafka-broker-list=${BROKER_LIST}",
         "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
         "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
